# Swarm-Runtime

./: .git_commit_msg.txt  .gitignore  ACKNOWLEDGEMENTS.md  ALIGNMENT.md  CHANGELOG.md  Cargo.toml  HIGH_IMPACT_ENTERPRISE.md  LOCAL_TESTING.md  README.md  ROADMAP.md  Roadmap-To-V1.md  SETUP.md  SWARM_STATUS.json  SwarmRuntimeDeveloperUserManual(v.0.20.3).md  TECHNICAL.md  TECHNICAL_SPEC.md  TERMUX_ENV.md  Technical-Architecture.md  USER_MANUAL.md  USE_CASES.md  app.py  append_artifact.py  bump_version.sh  calculator.rs  calculator.wasm  clean_warning.py  client.py  clippy_silencer.py  deduplicate_rx.py  fetch_lua.py  fetch_php.py  fetch_ruby.py  fetch_ruby_cli.py  fetch_sqlite.py  final_dashboard_fix.py  finish_v08.py  fix_android_tls.py  fix_artifact.py  fix_artifact_name.py  fix_borrow_checker.py  (+96 more)
.github/workflows/: ci.yml
components/judge/: Cargo.toml
components/judge/src/: lib.rs
components/lazarus/: Cargo.toml
components/lazarus/src/: lib.rs
components/prism/: Cargo.toml
components/prism/src/: lib.rs  sharder.rs
components/swarm-cli/: Cargo.toml
components/swarm-cli/src/: main.rs
components/swarm-node/: Cargo.toml
components/swarm-node/src/: dashboard.html  fix_worker_runtime.sh  gateway.rs  main.rs  sharding.rs  types.rs  worker.rs
components/synapse/: Cargo.toml
components/synapse/src/: lib.rs
components/synapse/tests/: chaos_network_test.rs
docs/: ACKNOWLEDGEMENTS.md  ALIGNMENT.md  HighImpactLowImplementation_USE_CASES.md  INTEGRATION_GUIDE.md  LOCAL_TESTING.md  ROADMAP.md  SETUP.md  TECHNICAL.md  TECHNICAL_SPEC.md  TERMUX_ENV.md  USER_MANUAL.md
examples/shard-worker/: Cargo.toml
examples/shard-worker/src/: lib.rs
jobs/hello-swarm/: Cargo.toml
jobs/hello-swarm/src/: lib.rs
maintenance_scripts/: apply_enterprise_patches.sh  cleanup_workspace.sh  complete_phase11.sh  generate_advanced_docs.sh  implement_federation_routing.sh  inject_federation.sh  inject_hardening_phase.sh  inject_phase15_testing.sh  push_workspace_cleanup.sh  release_v1_0_0.sh  release_v27.sh  release_v28.sh  sync_versions.sh  update_doc_paths.sh  update_docs_phase13.sh  update_docs_phase14.sh  update_roadmap_wora.sh
rootfs/: output.txt
rootfs/data/: app.js  app.lua  app.py  app.txt  output.txt
src/core/: sharding.rs
src/gateway/: sharding_handlers.rs
stateful-counter/: Cargo.toml
storage/shard_1/: db  snap.000000000000007F
swarm_data/: greetings.txt
test_payloads/: test_lua.lua  test_python.py
test_payloads/stateful-counter/: Cargo.toml
test_payloads/stateful-counter/src/: lib.rs
worker1_dir/: lua.wasm
worker2_dir/: sqlite.wasm
