[workspace]
members = [
    "components/swarm-cli",
    "components/prism",
    "components/synapse",
    "components/judge",
    "components/lazarus",
    "components/swarm-node"
, "components/swarm-cli", "test_payloads/stateful-counter"]
# Removed "examples/shard-worker" from this list!
resolver = "2"
