[package]
name = "swarm-node"
version = "0.6.3"
edition = "2021"

[dependencies]
clap = { version = "0.6.3", features = ["derive"] }
tokio = { version = "0.6.3", features = ["full"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
sled = "0.34"
async-trait = "0.1"
futures = "0.3"
libp2p = { version = "0.6.3", features = ["gossipsub", "macros", "tokio"] }
ax_msg = { version = "0.6.3", package = "axum" } # Using alias to avoid conflict if needed
axum = "0.6"
tower-http = { version = "0.6.3", features = ["cors"] }
serde = { version = "0.6.3", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
dashmap = "5.5" # NEW: For tracking pending requests
uuid = { version = "0.6.3", features = ["v4"] } # NEW: For unique request IDs

# Internal Components
prism = { path = "../prism" }
synapse = { path = "../synapse" }
judge = { path = "../judge" }
lazarus = { path = "../lazarus" }
