[package]
name = "swarm-node"
version = "0.8.0"
edition = "2021"

[dependencies]
# Core Logic
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
dashmap = "5.5"
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.3", features = ["derive"] }
sled = "0.34"

# Networking (Must match Synapse version)
libp2p = { version = "0.53.0", features = ["gossipsub", "mdns", "macros", "tokio"] }

# Web Server
axum = { version = "0.6", features = ["macros"] }

# Internal Components
synapse = { path = "../synapse" }
judge = { path = "../judge" }
