[package]
name = "synapse"
version = "0.6.3"
edition = "2021"

[dependencies]
libp2p = { version = "0.6.3", features = ["tcp", "tls", "dns", "yamux", "noise", "gossipsub", "mdns", "ping", "macros", "tokio"] }
tokio = { version = "0.6.3", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
rand = "0.8" # NEW: Random number generation

[dev-dependencies]
tokio = { version = "0.6.3", features = ["full", "macros", "rt-multi-thread"] }
