[package]
name = "synapse"
version = "0.15.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["macros", "tokio", "tcp", "noise", "yamux", "gossipsub", "mdns", "kad", "identify", "request-response", "cbor"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
